--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -17,7 +17,7 @@
                                 <input class="form-control" type="email" [(ngModel)]="usuario.usuario"
                                         placeholder="Email" id="email" name="email">
                                 <label for="foto">Descricao:</label>
-                                <textarea class="form-control" type="email" cols="3" rows="4" [(ngModel)]="usuario.descricao"
+                                <textarea class="form-control" cols="3" rows="4" [(ngModel)]="usuario.descricao"
                                         placeholder="sobre Você" id="email" name="descricao"></textarea>
 
                                 <label for="foto">Link da Foto:</label>
