--- a/src/app/edit/postagem-edit/postagem-edit.component.html
+++ b/src/app/edit/postagem-edit/postagem-edit.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container-fluid">
 
     <div class="row mt-5 mb-5">
         <div class="col-md-4">
+          <img src="../../../assets/imgs/Taking notes-amico.png" width="400em" alt="">
         </div>
         <div class="col-md-8">
   
@@ -32,7 +33,7 @@
   
                 <div class="d-flex justify-content-end mt-3">
                     <button type="button" class="btn btn-primary m-3 w-25" (click)="atualizarPostagem()">Salvar</button>
-                    <button type="button" class="btn btn-outline-danger m-3 w-25" routerLink="/home">Cancelar</button>
+                    <button type="button" class="btn btn-outline-danger m-3 w-25" routerLink="/inicio">Cancelar</button>
                 </div>
             </div>
   
