--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -2,7 +2,7 @@
   <section class="row">
 
 
-    <section class="col-md-3 mt-5">
+    <section class="menuperfil col-md-3 mt-5">
       <!-- PERFIL -->
       
       <div class="m-2">
@@ -62,7 +62,7 @@
 
                 <h3 class="card-title">{{postagem.titulo}}</h3>
                 <p class="card-text lead">{{postagem.descricao}}</p>
-                <img src={{postagem.anexo}} width="500" alt="">
+                <img src={{postagem.anexo}} width="100%" alt="">
                 <p class="card-text text-right"><small class="text-muted">{{postagem.data | date: 'dd/MM/yyyy'}} às
                     {{postagem.data | date: 'HH:mm'}}</small></p>
 
@@ -86,7 +86,7 @@
 
                 <h3 class="card-title">{{postagem.titulo}}</h3>
                 <p class="card-text lead">{{postagem.descricao}}</p>
-                <img src={{postagem.anexo}} width="500" alt="">
+                <img src={{postagem.anexo}} width="100%" alt="">
                 <p class="card-text text-right"><small class="text-muted">{{postagem.data | date: 'dd/MM/yyyy'}} às
                     {{postagem.data | date: 'HH:mm'}}</small></p>
 
