--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,7 +1,20 @@
 
+article,.menuperfil{
+    background: rgba( 255, 255, 255, 0.2 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 2px );
+-webkit-backdrop-filter: blur( 2px );
+border-radius: 10px;
+border: 1px solid rgba(62, 13, 13, 0.18);
+}
+
+.menuperfil{
+    height: 37em;
+}
 
 textarea{
     resize: none;
+    width: 100%;
 
 }
 
