--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,12 +20,12 @@
                 <a class="nav-link active" routerLink="/sobre-nos">Sobre-nos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="/contato" routerLink="">Contato</a>
+                <a class="nav-link active" routerLink="/contato">Contato</a>
             </li>
         </ul>
 
         <ul class="navbar-nav ml-auto d-flex align-items-center text-white fs-16">
-            <li *ngIf="auth.adm()" class="nav-item pl-3">
+            <li *ngIf="auth.adm()" class="nav-item pl-3 mr-3">
                 <a routerLink="/usuarios" class="text-white"><i class="fa fa-users" aria-hidden="true">Gerenciar Usuarios</i>
                 </a>
             </li>
