--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -15,9 +15,10 @@ form{
     background:white;
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    
+    background-color: rgba(70, 3, 54, 0.589);
     width: 60%;
     margin: auto;
+    color: black;
     }
 
 
@@ -26,14 +27,17 @@ input {
     display: block;
     height:3em;
     margin: auto;
-    width: 50%;
+    width: 80%;
 }
 
+label{
+    margin-top: 2%;
+}
 
 
 textarea{
     resize: none; 
-    width: 50%;
+    width: 80%;
     margin: auto;
 }
 
@@ -48,5 +52,10 @@ textarea{
 .btn-cancel{
     color: white;
     background:rgb(216, 62, 62);
+    border: 1px solid black;
 }
 
+.inputDesc{
+    height: 200px;
+
+}
