--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,15 +1,32 @@
-<form class="" action="">
-    <fieldset>
-        <legend>Contato</legend>
-        <label for="nome">Nome Completo:</label>
-        <input type="text" placeholder="Nome Completo" id="nome" name="nome">
+<body>
 
-        <label for="email">Email:</label>
-        <input type="email" placeholder="Email" id="email" name="email">
 
-        <label for="senha">Assunto:</label>
-        <input type="textArea" id="assunto" name="assunto">
-        <button type="submit">Enviar</button>
-    </fieldset>
+<article class="container-fluid">
+    <div class="row d-flex text-center m-auto justify-content-center">
+        <div class="col-md-6">
+            <form class="form-group mt-5 mb-5">
+                <h2>Seja um Parceiro</h2>
+                <p style="font-size: 15px;">ou envie sugestões</p>
+                <label for="nome">Nome</label>
+                <input [(ngModel)]="nome" class="form-control" type="text" name="nome" id="">
+                <label for="assunto">Assunto</label>
+                <input [(ngModel)]="assunto" class="form-control" type="text" name="assunto" id="">
+                <label for="mensagem">Mensagem</label>
+                <textarea class="form-control" [(ngModel)]="mensagem" name="mensagem" id="" cols="10" rows="5"></textarea>
 
-</form>
+                <br>
+                <a (click)="enviar()" class="btn btn-primary p-2" href="mailto:geeksforgeeks@gmial.com?
+                    cc=gfg@gmail.com&
+                    bcc=geeks@gmail.com
+                    &subject={{assunto}}
+                    &body={{mensagem}}">
+                    Enviar
+                </a>
+            </form>
+        </div>
+        
+    </div>
+</article>
+
+
+</body>
