--- a/src/app/delete/perfil-delete/perfil-delete.component.html
+++ b/src/app/delete/perfil-delete/perfil-delete.component.html
@@ -1,27 +1,25 @@
-<div class="container">
+<article class="container-fluid">
 
-    <div class="row mt-5 mb-5">
-        <div class="col-md-6"> <img src="../../../assets/imgs/trashTema.jpg" width="500" alt="">
-        </div>
-       <div class="col-md-6">
-          <div class="card mt-5">
-  
-             <div class="card-body" >
-               <p class="card-text" aria-describedby="texto">{{usuario.id}} </p>
-               <p class="card-text" aria-describedby="texto">{{usuario.nome}} </p>
-             </div>
-          </div>
-  
-          <hr class="mt-4 mb-4">
-  
-          <h5 class="text-center">Tem certeza que deseja apagar esse Usuario?</h5>
-          <div class="d-flex justify-content-center mt-5">
-             <button class="btn btn-outline-success mr-3" (click)="deletarUsuario()">Sim</button>
-             <button class="btn btn-outline-danger" routerLink="/usuarios" >Não</button>
-          </div>
-        </div>
-    </div>
-  </div>
-  
-  
-  
+   <div class="row justify-content-center">
+      <div class="col-md-8 mt-5">
+
+         <div class=" text-center">
+            <img src={{usuario.foto}} class="rounded-circle" width="100px" alt="">
+            <p class="card-text" aria-describedby="texto">id: {{usuario.id}} </p>
+            <p class="card-text" aria-describedby="texto">nome: {{usuario.nome}} </p>
+            <p class="card-text" aria-describedby="texto">descrição: {{usuario.descricao}} </p>
+         </div>
+
+         <hr class="mt-4 mb-4">
+
+         <h5 class="text-center">Tem certeza que deseja apagar esse Usuario?</h5>
+         <div class="d-flex justify-content-center mt-5">
+            <button class="btn btn-outline-success mr-3" (click)="deletarUsuario()">Sim</button>
+            <button class="btn btn-outline-danger" routerLink="/usuarios">Não</button>
+         </div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+   </div>
+</article>
