--- a/src/app/edit/perfil-edit/perfil-edit.component.html
+++ b/src/app/edit/perfil-edit/perfil-edit.component.html
@@ -1,47 +1,49 @@
 <article class="container-fluid">
 
-    <section class="row d-flex justify-content-center">
+        <section class="row d-flex justify-content-center">
 
 
-            <section class="col-md-4 text-center mt-4">
-                <img src="../../assets/imgs/logoUnidas.png" width="250" height="170" alt="">
+                <section class="col-md-8 text-center mt-4">
+                        <img src="../../assets/imgs/logoUnidas.png" width="250" height="170" alt="">
 
-                    <form class="text-monospace form-group" action="">
-                            <br>
-                            <h1 class="">Alterar Usuario</h1>
-                            <label for="nome">Nome Completo:</label>
-                            <input class="form-control" type="text" [(ngModel)]="usuario.nome"
-                                    placeholder="Nome Completo" id="nome" name="nome">
+                        <div class="text-monospace form-group forma" action="">
+                                <br>
+                                <h1 class="">Atualizar:</h1>
+                                <label for="nome">Nome Completo:</label>
+                                <input class="form-control" type="text" [(ngModel)]="usuario.nome"
+                                        placeholder="Nome Completo" id="nome" name="nome">
 
-                            <label for="email">Email:</label>
-                            <input class="form-control" type="email" [(ngModel)]="usuario.usuario"
-                                    placeholder="Email" id="email" name="email">
-                            <label for="foto">Descricao:</label>
-                            <textarea class="form-control" type="email" cols="3" rows="4" [(ngModel)]="usuario.descricao"
-                                    placeholder="sobre Você" id="email" name="descricao"></textarea>
+                                <label for="email">Email:</label>
+                                <input class="form-control" type="email" [(ngModel)]="usuario.usuario"
+                                        placeholder="Email" id="email" name="email">
 
-                            <label for="foto">Link da Foto:</label>
-                            <input class="form-control" type="email" [(ngModel)]="usuario.foto"
-                                    placeholder="Link da foto" id="email" name="foto">
+                                <label for="foto">Descrição:</label>
+                                <textarea class="form-control" type="text" name="" id="" cols="30" rows="10" size="1" maxlength="255" id="desc"
+                                (keydown)="desc($event)" [(ngModel)]="usuario.descricao"></textarea>
+                                <p>caracters:{{contagem}}</p>
 
-                            <label for="senha">senha:</label>
-                            <input class="form-control" type="password" (input)="confirmeSenha($event)"
-                                    placeholder="Senha" id="senha" name="senha">
+                                <label for="foto">Link da Foto:</label>
+                                <input class="form-control" type="email" [(ngModel)]="usuario.foto"
+                                        placeholder="Link da foto" id="foto" name="foto">
 
-                            <label for="confirmsenha">Confirmar Senha:</label>
-                            <input class="form-control" type="password" [(ngModel)]="usuario.senha"
-                                    placeholder="Confirmar Senha" id="confirmsenha" name="confirmsenha">
+                                <label for="senha">Senha:</label>
+                                <input class="form-control" type="password" (input)="confirmeSenha($event)"
+                                        placeholder="Senha" id="senha" name="senha">
 
-
-                            <button class="btn btn-primary m-4 p-2" type="submit"
-                                    (click)="altUser()">Atualizar</button>
-                            <a class="btn btn-cancel m-4 p-2" routerLink="/inicio">Cancelar</a>
-
-                    </form>
-            </section>
+                                <label for="confirmsenha">Confirmar Senha:</label>
+                                <input class="form-control" type="password" [(ngModel)]="usuario.senha"
+                                        placeholder="Confirmar Senha" id="confirmsenha" name="confirmsenha">
 
 
-    </section>
+                                <button class="btn btn-cad m-4 p-2" type="submit"
+                                        (click)="altUser()">Alterar</button>
+                                <a class="btn btn-cancel m-4 p-2" routerLink="/inicio">Cancelar</a>
+
+                        </div>
+                </section>
+
+
+        </section>
 
 
 
