--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,21 +1,19 @@
-article{
-      min-height: 26.4em;
-      background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
+
 
     form{
-        text-transform: capitalize;
         color:rgb(250, 244, 244);
         text-align: center;
         background-color: rgba(70, 3, 54, 0.589);
         font-size: 1.3em;
-        border-radius: 3em;
+        border-radius: 16px;
         width: 75%;
         margin: auto;
         padding:2%;
-     }
+
+
+
+    }
     
     
  form a{
@@ -28,15 +26,12 @@ label{
     margin-top: 2%;
 }
 
-    input {
-        margin: auto;
-        display: block;
-        height: 3em;
-    
-        border: 1px solid black;
-        border-radius: 10px;
-    }
-    
+
+input{
+    width: 80%;
+    height: 3.5em;
+    margin: auto;
+}
 
 
     .btn{
