--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -3,19 +3,19 @@
     <section class="row  d-flex justify-content-center">
         
         <section class="col-md-6 mt-5 pt-3">
-        <form class= "lead mt-5" action="">
+        <form class="form-group mt-5" action="">
 
          
-                <h3 class="text-monospace">Entrar</h3>
+                <h3 class="">Entrar</h3>
                 <label for="email">Email:</label>
-                <input type="email" [(ngModel)]="usuarioLogin.usuario" placeholder="Email" id="email" name="email">
+                <input  class="form-control" type="email" [(ngModel)]="usuarioLogin.usuario" placeholder="Email" id="email" name="email">
 
-                <label for="senha">senha:</label>
-                <input type="password"  [(ngModel)]="usuarioLogin.senha" placeholder="Senha" id="senha" name="senha">
+                <label for="senha">Senha:</label>
+                <input type="password"  class="form-control" [(ngModel)]="usuarioLogin.senha" placeholder="Senha" id="senha" name="senha">
 
                 <button type="submit" class="btn mt-4" (click)="Entrar()">Entrar</button>
                
-                <p class="text-center lead mt-4">
+                <p class="text-center mt-4">
                     Nao tem uma conta? <a routerLink="/cadastrar">Crie uma Agora</a>
                 </p>
          
