--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -13,11 +13,19 @@
 
 
 header{
-    text-align: center;
     background:linear-gradient(rgb(73, 2, 73),rgb(27, 3, 27),rgb(13, 0, 31));
 
 }
 
 nav div ul li a{
 color:white;
+}
+
+
+.head ul li{
+    display: inline;
+}
+
+.head ul li a{
+    margin-right: auto;
 }
