--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,8 +1,18 @@
 <footer id="contato" class=" text-white text-center text-lg-start">
- 
 
 
+<article  class="container-fluid">
+  <section class="row justify-content-center">
+    <div class="col-md-6 mt-5" style="font-size:medium;">
+      <a  routerLink="/contato">Fale-Conosco</a>
+      <a  routerLink="/sobre-nos">Sobre-Nos</a>
+    </div>
+  </section>
+</article>
+
+<section>
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Copyright:+Unidas
-   </div>
-  </footer>
+  </div>
+</section>
+</footer>
