--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -1,9 +1,25 @@
-
-
 <article class="container-fluid text-center">
 
+    <br>
+    <br>
 
-    <h1 class="display-4  font-weight-bold text-center">Sobre Nos</h1>
+    <h1 class="display-4 mb-4 font-weight-bold text-center">Sobre Nós:</h1>
+
+
+<div class="text-justify" style="font-size: 1.4em;">
+    Somos  desenvolvedores da + unidas,
+rede-social que tem como objetivo dar suporte para mulheres mães de baixa renda.
+
+Segundo o portal FGV, Quase metade das mulheres que tiram licença-maternidade, após 24 meses, está fora do mercado de trabalho. De contrapartida, 35% das famílias têm uma mulher apontada como responsável pelo domicílio, aponta o Instituto de Pesquisa Econômica Aplicada (Ipea).
+
+
++ unidas conecta mulheres, ONGs de cursos de tecnologia e empregadores.
+</div>
+
+<br>
+<hr>
+
+
     <section class="row">
 
         <section class="col-md-4">
@@ -19,7 +35,7 @@
        
             <img src="https://avatars.githubusercontent.com/u/97360327?v=4" alt="">
            
-            <h3>Jaquelane Oliveira</h3>
+            <h3>Jaquelane Bessa</h3>
             <a href="https://www.linkedin.com/in/jaquelane-bessa-709978156/"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
             <a href="https://github.com/JaquelaneOBessa"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
         </section>
@@ -64,11 +80,10 @@
 
     </section>
 
-  
 
 
 
+<br><br>
 
 
 </article>
-
