--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -1,7 +1,9 @@
+<body>
+
 <!-- Cadastre Temas -->
 <article class="container-fluid">
 
-    <section class="row bg-light">
+    <section class="row">
   
       <section class="col-md-12 text-dark">
   
@@ -88,3 +90,4 @@
   
   
   </article>
+</body>
