--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<article class="container-fluid">
 
     <div class="row">
         
@@ -10,6 +10,7 @@
               <img src={{usuario.foto}} width="50" class="rounded-circle" alt="">
               <h3 class="lead">email: {{usuario.usuario}}</h3>
               <h3 class="lead">nome: {{usuario.nome}}</h3>
+              <h3 class="lead">tipo: {{usuario.tipo}}</h3>
               <a class="m-3" [routerLink]="['/perfil-edit',usuario.id]"><i class="fa fa-pencil-square-o fa-xl"
                   aria-hidden="true"></i></a>
   
@@ -21,4 +22,4 @@
         </div>
       
     </div>
-  </div>
+</article>
