--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -6,7 +6,7 @@
                 <section class="col-md-8 text-center mt-4">
                         <img src="../../assets/imgs/logoUnidas.png" width="250" height="170" alt="">
 
-                        <form class="text-monospace form-group" action="">
+                        <form class="form-group" action="">
                                 <br>
                                 <h1 class="">Cadastro</h1>
                                 <label for="nome">Nome Completo:</label>
@@ -16,15 +16,17 @@
                                 <label for="email">Email:</label>
                                 <input class="form-control" type="email" [(ngModel)]="usuario.usuario"
                                         placeholder="Email" id="email" name="email">
-                                <label for="foto">Descricao:</label>
-                                <textarea class="form-control" cols="3" rows="4" [(ngModel)]="usuario.descricao"
-                                        placeholder="sobre Você" id="email" name="descricao"></textarea>
+
+                                <label for="foto">Descrição:</label>
+                                <textarea class="form-control" type="text" name="" id="" cols="30" rows="5" size="1" maxlength="255" id="desc"
+                                (keydown)="desc($event)"></textarea>
+                                <p>caracters:{{contagem}}</p>
 
                                 <label for="foto">Link da Foto:</label>
                                 <input class="form-control" type="email" [(ngModel)]="usuario.foto"
-                                        placeholder="Link da foto" id="email" name="foto">
+                                        placeholder="Link da foto" id="foto" name="foto">
 
-                                <label for="senha">senha:</label>
+                                <label for="senha">Senha:</label>
                                 <input class="form-control" type="password" (input)="confirmarSenha($event)"
                                         placeholder="Senha" id="senha" name="senha">
 
