--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -1,32 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap');
+
+*{
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+}
+
 form{
     text-transform: capitalize;
-    color: white;
-        
+    color:rgb(250, 244, 244);
     text-align: center;
+    background-color: rgba(70, 3, 54, 0.589);
     font-size: 1.3em;
-}
-
-
-form button{
-    margin-top: 2%;
-    margin-bottom: 2%;
-    text-align: center;
-    background: rgb(85, 0, 255);
-    border-radius: 10px;
-    color: rgb(200, 255, 0);
-    height: 2em;
-    width: 10%;
-    font-size: 18px;
-}
-
-
-input {
-    display: inline;
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 15%;
+    border-radius: 3em;
+    width: 75%;
+    margin: auto;
+    padding:2%;
 }
 
 label{
-    margin-left: 2%;
+    margin-top: 2%;
+    font-weight: 500;
+}
+
+
+body{
+    background-color: #c9c3cc;
+}
+
+form{
+    background-color: rgba(70, 3, 54, 0.589);
+box-shadow: 0 8px 32px 0 rgba(23, 0, 43, 0.37);
+backdrop-filter: blur( 2px );
+-webkit-backdrop-filter: blur( 2px );
+border-radius: 20px;
+border: 1px solid rgba(62, 13, 13, 0.18);
 }
