--- a/src/app/edit/tema-edit/tema-edit.component.html
+++ b/src/app/edit/tema-edit/tema-edit.component.html
@@ -1,29 +1,30 @@
+<article class="row justify-content-center text-center">
 
-        <div class="row justify-content-center text-center">
-  
-            <div class="col-md-5">
-    
-    
-              <h1>Temas</h1>
-              <p class="fs-30">Editar Tema:</p>
-    
-    
-    
-              <div class="form-group">
-                <input type="text" [(ngModel)]="tema.nome" class="form-control" id="titulo" placeholder="digite o titulo do tema">
-              </div>
-    
-              <div class="form-group">
-                <input type="text"  [(ngModel)]="tema.descricao" class="form-control" id="descricao" placeholder="digite a descricao do tema">
-              </div>
-    
-    
-              <div class="d-flex justify-content-center">
-    
-                <button class="btn btn-primary m-3" (click)="updateTema()">Atualizar</button>
-                <button class="btn btn-outline-danger m-3" routerLink="/tema">Cancelar</button>
-    
-              </div>
-    
-            </div>
-          </div>
+  <div class="col-md-5">
+
+
+    <h1>Temas</h1>
+    <p class="fs-30">Editar Tema:</p>
+
+
+
+    <div class="form-group">
+      <input type="text" [(ngModel)]="tema.nome" class="form-control" id="titulo" placeholder="digite o titulo do tema">
+    </div>
+
+    <div class="form-group">
+      <input type="text" [(ngModel)]="tema.descricao" class="form-control" id="descricao"
+        placeholder="digite a descricao do tema">
+    </div>
+
+
+    <div class="d-flex justify-content-center">
+
+      <button class="btn btn-primary m-3" (click)="updateTema()">Atualizar</button>
+      <button class="btn btn-outline-danger m-3" routerLink="/tema">Cancelar</button>
+
+    </div>
+<br><br><br>
+  </div>
+
+</article>
