--- a/src/app/edit/perfil-edit/perfil-edit.component.html
+++ b/src/app/edit/perfil-edit/perfil-edit.component.html
@@ -20,7 +20,7 @@
                                 <label for="foto">Descrição:</label>
                                 <textarea class="form-control" type="text" name="" id="" cols="30" rows="10" size="1" maxlength="255" id="desc"
                                 (keydown)="desc($event)" [(ngModel)]="usuario.descricao"></textarea>
-                                <p>caracters:{{contagem}}</p>
+                                <p>caracters:{{num}}</p>
 
                                 <label for="foto">Link da Foto:</label>
                                 <input class="form-control" type="email" [(ngModel)]="usuario.foto"
