--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -3,79 +3,84 @@
     <br>
     <br>
 
-    <h1 class="display-4 mb-4 font-weight-bold text-center">Sobre Nós:</h1>
+    <h1 class=" mb-4 font-weight-bold text-center">Sobre Nós:</h1>
 
 
-<div class="text-justify" style="font-size: 1.4em;">
-    Somos  desenvolvedores da + unidas,
-rede-social que tem como objetivo dar suporte para mulheres mães de baixa renda.
+    <div class="text-justify" style="font-size: 1.4em;">
+        O projeto mais unidas foi criado para apoiar e conectar mulheres mães, trans e cis de zonas perifericas entre
+        si, com pessoas, empresas de curso e empregabilidade parceiras do projeto.
+        O intuito é agregar conhecimento, informação e possibilidades na vida dessas mulheres e assim levar ao
+        empoderamento e independência.
+    </div>
 
-Segundo o portal FGV, Quase metade das mulheres que tiram licença-maternidade, após 24 meses, está fora do mercado de trabalho. De contrapartida, 35% das famílias têm uma mulher apontada como responsável pelo domicílio, aponta o Instituto de Pesquisa Econômica Aplicada (Ipea).
-
-
-+ unidas conecta mulheres, ONGs de cursos de tecnologia e empregadores.
-</div>
-
-<br>
-<hr>
-
-
+    <br>
+    <hr>
+    <br>
+    <h1 class="font-weight-bold">Time de Desenvolvedores:</h1>
     <section class="row">
 
         <section class="col-md-4">
-       
+
             <img src="https://avatars.githubusercontent.com/u/98328460?v=4" alt="">
-           
+
             <h3>Bruno Diniz</h3>
-            <a href="https://www.linkedin.com/in/bruno-diniz-782074184/"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-            <a href="https://github.com/dinizbpb"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/bruno-diniz-782074184/" target="_blank"><i class="fa fa-linkedin-square fa-5x"
+                    aria-hidden="true"></i></a>
+            <a href="https://github.com/dinizbpb" target="_blank"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
         </section>
 
         <section class="col-md-4">
-       
+
             <img src="https://avatars.githubusercontent.com/u/97360327?v=4" alt="">
-           
+
             <h3>Jaquelane Bessa</h3>
-            <a href="https://www.linkedin.com/in/jaquelane-bessa-709978156/"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-            <a href="https://github.com/JaquelaneOBessa"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/jaquelane-bessa-709978156/" target="_blank"><i class="fa fa-linkedin-square fa-5x"
+                    aria-hidden="true"></i></a>
+            <a href="https://github.com/JaquelaneOBessa" target="_blank"><i class="ml-4 fa fa-github-square fa-5x"
+                    aria-hidden="true"></i></a>
         </section>
 
         <section class="col-md-4">
-       
+
             <img src="https://avatars.githubusercontent.com/u/89227491?v=4" alt="">
-           
+
             <h3>William Marques</h3>
-            <a href="https://www.linkedin.com/in/william-marques-6513a1181/"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-            <a href="https://github.com/kogmau"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/william-marques-6513a1181/" target="_blank"><i class="fa fa-linkedin-square fa-5x"
+                    aria-hidden="true"></i></a>
+            <a href="https://github.com/kogmau" target="_blank"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
         </section>
     </section>
 
     <section class="row">
         <section class="col-md-4">
-       
+
             <img src="https://avatars.githubusercontent.com/u/51775914?v=4" alt="">
-           
+
             <h3>Miguel Araujo</h3>
-            <a href="https://www.linkedin.com/in/miguelaraujo98/"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-            <a href="https://github.com/mig1998"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/miguelaraujo98/" target="_blank"><i class="fa fa-linkedin-square fa-5x"
+                    aria-hidden="true"></i></a>
+            <a href="https://github.com/mig1998" target="_blank"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
         </section>
 
         <section class="col-md-4">
-       
+
             <img src="https://avatars.githubusercontent.com/u/98328391?v=4" alt="">
-           
+
             <h3>Diego Martins</h3>
-            <a href="https://www.linkedin.com/in/eudiegow/"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-            <a href="https://github.com/EuDiegow"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/eudiegow/" target="_blank"><i class="fa fa-linkedin-square fa-5x"
+                    aria-hidden="true"></i></a>
+            <a href="https://github.com/EuDiegow" target="_blank"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
         </section>
 
         <section class="col-md-4">
-       
+
             <img src="https://avatars.githubusercontent.com/u/98328512?v=4" alt="">
-           
+
             <h3>Luana Assis</h3>
-            <a href="https://www.linkedin.com/in/luanaassisi/"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-            <a href="https://github.com/luanaassisi"><i class="ml-4 fa fa-github-square fa-5x" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/luanaassisi/" target="_blank"><i class="fa fa-linkedin-square fa-5x"
+                    aria-hidden="true"></i></a>
+            <a href="https://github.com/luanaassisi" target="_blank"><i class="ml-4 fa fa-github-square fa-5x"
+                    aria-hidden="true"></i></a>
         </section>
 
     </section>
@@ -83,7 +88,7 @@ Segundo o portal FGV, Quase metade das mulheres que tiram licença-maternidade, 
 
 
 
-<br><br>
+    <br><br>
 
 
 </article>
