--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -25,7 +25,8 @@
                                 <label for="foto">Link da Foto:</label>
                                 <input class="form-control" type="email" [(ngModel)]="usuario.foto"
                                         placeholder="Link da foto" id="foto" name="foto">
-
+                                        <a href="https://imgur.com/" class="" target="_blank">clique aqui para hospedar a imagem</a>
+                                        <br>
                                 <label for="senha">Senha:</label>
                                 <input class="form-control" type="password" (input)="confirmarSenha($event)"
                                         placeholder="Senha" id="senha" name="senha">
