--- a/src/app/edit/perfil-edit/perfil-edit.component.css
+++ b/src/app/edit/perfil-edit/perfil-edit.component.css
@@ -21,7 +21,9 @@ article{
         color: black;
         }
     
-    
+    .forma a{
+        color:rgb(43, 8, 77);
+    }
     
     input {
         display: block;
